Add Ques_14.ipynb for data quality improvement techniques

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_14.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_14.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,40 +111,238 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔍 Missing Values:\n",
-      "Name          0\n",
-      "Age           1\n",
-      "Salary        1\n",
-      "Department    0\n",
-      "dtype: int64\n",
+      "🔧 After Handling Missing Data:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>HR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>60000.0</td>\n",
+       "      <td>Finance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Charlie</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>57000.0</td>\n",
+       "      <td>IT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>David</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>70000.0</td>\n",
+       "      <td>IT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eve</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>55000.0</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>HR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Name   Age   Salary Department\n",
+       "0    Alice  25.0  50000.0         HR\n",
+       "1      Bob  25.0  60000.0    Finance\n",
+       "2  Charlie  35.0  57000.0         IT\n",
+       "3    David  40.0  70000.0         IT\n",
+       "4      Eve  -5.0  55000.0    Unknown\n",
+       "5    Alice  25.0  50000.0         HR"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "🔁 Duplicate Rows:\n",
-      "    Name   Age   Salary Department\n",
-      "5  Alice  25.0  50000.0         HR\n",
+      "🔁 Duplicate Rows Found:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>50000.0</td>\n",
+       "      <td>HR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name   Age   Salary Department\n",
+       "5  Alice  25.0  50000.0         HR"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "📊 Outliers in Age:\n",
-      "4   -5.0\n",
-      "Name: Age, dtype: float64\n",
+      "📊 Outliers in Age:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4   -5.0\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "📊 Outliers in Salary:\n",
-      "Series([], Name: Salary, dtype: float64)\n",
+      "✅ No outliers detected in 'Salary'.\n",
       "\n",
       "🧾 Schema Validation:\n",
-      "✅ Column 'Name' matches expected type.\n",
-      "✅ Column 'Age' matches expected type.\n",
-      "✅ Column 'Salary' matches expected type.\n",
-      "✅ Column 'Department' matches expected type.\n",
+      "✅ All required columns are present.\n",
+      "❌ Error: ⚠️ Column 'Name' does not have the expected type: <class 'str'>\n",
       "\n",
-      "🚨 Invalid Department Entries:\n",
-      "  Name Department\n",
-      "4  Eve    Unknown\n",
+      "🚨 Invalid Department Entries:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eve</td>\n",
+       "      <td>Unknown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Name Department\n",
+       "4  Eve    Unknown"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "🎯 Data Quality Checks Completed.\n"
      ]
     }
    ],
    "source": [
-    "# Ques_14.ipynb - Data Quality Automation Tools\n",
+    "# Ques_14.ipynb - Data Quality Automation Tools (Improved Version)\n",
     "\n",
     "# 📌 Step 1: Import necessary libraries\n",
     "import pandas as pd\n",
@@ -165,15 +363,38 @@
     "print(\"✅ Sample Data:\")\n",
     "display(df)\n",
     "\n",
-    "# 📌 Step 3: Detect Missing Values\n",
-    "print(\"\\n🔍 Missing Values:\")\n",
-    "print(df.isnull().sum())\n",
+    "# 📌 Step 3: Error Handling Function for Missing Columns and Invalid Data Types\n",
+    "def check_for_missing_columns(df, expected_columns):\n",
+    "    missing_cols = [col for col in expected_columns if col not in df.columns]\n",
+    "    if missing_cols:\n",
+    "        raise ValueError(f\"❌ Missing required columns: {', '.join(missing_cols)}\")\n",
+    "    print(\"✅ All required columns are present.\")\n",
     "\n",
-    "# 📌 Step 4: Detect Duplicates\n",
-    "print(\"\\n🔁 Duplicate Rows:\")\n",
-    "print(df[df.duplicated()])\n",
+    "def check_for_data_types(df, expected_types):\n",
+    "    for col, dtype in expected_types.items():\n",
+    "        if not pd.api.types.is_dtype_equal(df[col].dtype, dtype):\n",
+    "            raise TypeError(f\"⚠️ Column '{col}' does not have the expected type: {dtype}\")\n",
+    "    print(\"✅ All columns have correct data types.\")\n",
     "\n",
-    "# 📌 Step 5: Detect Outliers in Numerical Columns (using IQR)\n",
+    "# 📌 Step 4: Handle Missing Data Upfront (Avoid Redundant dropna Calls)\n",
+    "df.fillna({\n",
+    "    'Age': df['Age'].median(),  # Fill missing 'Age' with median\n",
+    "    'Salary': df['Salary'].mean(),  # Fill missing 'Salary' with mean\n",
+    "    'Department': 'Unknown'  # Fill missing 'Department' with 'Unknown'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "print(\"\\n🔧 After Handling Missing Data:\")\n",
+    "display(df)\n",
+    "\n",
+    "# 📌 Step 5: Detect Duplicates\n",
+    "duplicates = df[df.duplicated()]\n",
+    "if not duplicates.empty:\n",
+    "    print(\"\\n🔁 Duplicate Rows Found:\")\n",
+    "    display(duplicates)\n",
+    "else:\n",
+    "    print(\"\\n✅ No duplicate rows found.\")\n",
+    "\n",
+    "# 📌 Step 6: Detect Outliers in Numerical Columns (using IQR)\n",
     "def detect_outliers_iqr(column):\n",
     "    Q1 = column.quantile(0.25)\n",
     "    Q3 = column.quantile(0.75)\n",
@@ -183,12 +404,20 @@
     "    return column[(column < lower) | (column > upper)]\n",
     "\n",
     "print(\"\\n📊 Outliers in Age:\")\n",
-    "print(detect_outliers_iqr(df['Age'].dropna()))\n",
+    "outliers_age = detect_outliers_iqr(df['Age'])\n",
+    "if not outliers_age.empty:\n",
+    "    display(outliers_age)\n",
+    "else:\n",
+    "    print(\"✅ No outliers detected in 'Age'.\")\n",
     "\n",
     "print(\"\\n📊 Outliers in Salary:\")\n",
-    "print(detect_outliers_iqr(df['Salary'].dropna()))\n",
+    "outliers_salary = detect_outliers_iqr(df['Salary'])\n",
+    "if not outliers_salary.empty:\n",
+    "    display(outliers_salary)\n",
+    "else:\n",
+    "    print(\"✅ No outliers detected in 'Salary'.\")\n",
     "\n",
-    "# 📌 Step 6: Schema Validation\n",
+    "# 📌 Step 7: Schema Validation (more robust)\n",
     "expected_columns = {\n",
     "    'Name': str,\n",
     "    'Age': (int, float),\n",
@@ -197,22 +426,21 @@
     "}\n",
     "\n",
     "print(\"\\n🧾 Schema Validation:\")\n",
-    "for col, dtype in expected_columns.items():\n",
-    "    if col not in df.columns:\n",
-    "        print(f\"❌ Missing column: {col}\")\n",
-    "    else:\n",
-    "        actual_dtype = df[col].dropna().map(type).unique()\n",
-    "        if not any(issubclass(t, dtype if isinstance(dtype, tuple) else (dtype,)) for t in actual_dtype):\n",
-    "            print(f\"⚠️ Column '{col}' has incorrect data type(s): {actual_dtype}\")\n",
-    "        else:\n",
-    "            print(f\"✅ Column '{col}' matches expected type.\")\n",
+    "try:\n",
+    "    check_for_missing_columns(df, expected_columns.keys())\n",
+    "    check_for_data_types(df, expected_columns)\n",
+    "except (ValueError, TypeError) as e:\n",
+    "    print(f\"❌ Error: {e}\")\n",
     "\n",
-    "# 📌 Step 7: Categorical Consistency Check\n",
+    "# 📌 Step 8: Categorical Consistency Check\n",
     "expected_departments = ['HR', 'Finance', 'IT', 'Marketing']\n",
     "invalid_departments = df[~df['Department'].isin(expected_departments)]\n",
     "\n",
-    "print(\"\\n🚨 Invalid Department Entries:\")\n",
-    "print(invalid_departments[['Name', 'Department']])\n",
+    "if not invalid_departments.empty:\n",
+    "    print(\"\\n🚨 Invalid Department Entries:\")\n",
+    "    display(invalid_departments[['Name', 'Department']])\n",
+    "else:\n",
+    "    print(\"✅ All departments are valid.\")\n",
     "\n",
     "# 📌 Final Summary\n",
     "print(\"\\n🎯 Data Quality Checks Completed.\")\n"
