Add Ques_14.ipynb for data quality improvement techniques

--- a/src/Module 3/Techniques to Improve Data Quality/Ques_14.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_14.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,101 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "🔧 After Handling Missing Data:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Salary</th>\n",
-       "      <th>Department</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Alice</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>HR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>60000.0</td>\n",
-       "      <td>Finance</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Charlie</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>57000.0</td>\n",
-       "      <td>IT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>David</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>70000.0</td>\n",
-       "      <td>IT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Eve</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>55000.0</td>\n",
-       "      <td>Unknown</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Alice</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>50000.0</td>\n",
-       "      <td>HR</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Name   Age   Salary Department\n",
-       "0    Alice  25.0  50000.0         HR\n",
-       "1      Bob  25.0  60000.0    Finance\n",
-       "2  Charlie  35.0  57000.0         IT\n",
-       "3    David  40.0  70000.0         IT\n",
-       "4      Eve  -5.0  55000.0    Unknown\n",
-       "5    Alice  25.0  50000.0         HR"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "✅ Missing data handled efficiently.\n",
       "\n",
       "🔁 Duplicate Rows Found:\n"
      ]
@@ -261,7 +167,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📊 Outliers in Age:\n"
+      "📊 Outliers in Age (Sensitivity=1.5):\n"
      ]
     },
     {
@@ -279,74 +185,25 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📊 Outliers in Salary:\n",
+      "📊 Outliers in Salary (Sensitivity=1.5):\n",
       "✅ No outliers detected in 'Salary'.\n",
-      "\n",
-      "🧾 Schema Validation:\n",
-      "✅ All required columns are present.\n",
-      "❌ Error: ⚠️ Column 'Name' does not have the expected type: <class 'str'>\n",
-      "\n",
-      "🚨 Invalid Department Entries:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Department</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Eve</td>\n",
-       "      <td>Unknown</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Name Department\n",
-       "4  Eve    Unknown"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "⚠️ Column 'Name' has incorrect type. Expected: <class 'str'>, Found: object\n",
+      "⚠️ Column 'Age' has incorrect type. Expected: (<class 'int'>, <class 'float'>), Found: float64\n",
+      "⚠️ Column 'Salary' has incorrect type. Expected: (<class 'int'>, <class 'float'>), Found: float64\n",
+      "⚠️ Column 'Department' has incorrect type. Expected: <class 'str'>, Found: object\n",
+      "✅ Schema validation completed.\n",
       "\n",
       "🎯 Data Quality Checks Completed.\n"
      ]
     }
    ],
    "source": [
-    "# Ques_14.ipynb - Data Quality Automation Tools (Improved Version)\n",
+    "# Ques_14.ipynb - Data Quality Automation Tools (Optimized Version)\n",
     "\n",
     "# 📌 Step 1: Import necessary libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import re\n",
     "\n",
     "# Optional: install great_expectations (if allowed in your environment)\n",
     "# !pip install great_expectations\n",
@@ -373,51 +230,84 @@
     "def check_for_data_types(df, expected_types):\n",
     "    for col, dtype in expected_types.items():\n",
     "        if not pd.api.types.is_dtype_equal(df[col].dtype, dtype):\n",
-    "            raise TypeError(f\"⚠️ Column '{col}' does not have the expected type: {dtype}\")\n",
-    "    print(\"✅ All columns have correct data types.\")\n",
+    "            print(f\"⚠️ Column '{col}' has incorrect type. Expected: {dtype}, Found: {df[col].dtype}\")\n",
+    "    print(\"✅ Data types check completed.\")\n",
     "\n",
-    "# 📌 Step 4: Handle Missing Data Upfront (Avoid Redundant dropna Calls)\n",
-    "df.fillna({\n",
-    "    'Age': df['Age'].median(),  # Fill missing 'Age' with median\n",
-    "    'Salary': df['Salary'].mean(),  # Fill missing 'Salary' with mean\n",
-    "    'Department': 'Unknown'  # Fill missing 'Department' with 'Unknown'\n",
-    "}, inplace=True)\n",
+    "# 📌 Step 4: Handle Missing Data Upfront (Check if columns contain NaN values before applying fillna)\n",
+    "def handle_missing_data(df):\n",
+    "    for col in df.columns:\n",
+    "        if df[col].isnull().any():  # Only apply fillna if there are missing values\n",
+    "            if df[col].dtype in ['float64', 'int64']:\n",
+    "                fill_value = df[col].median() if df[col].dtype != 'object' else 'Unknown'\n",
+    "            else:\n",
+    "                fill_value = 'Unknown'\n",
+    "            df[col].fillna(fill_value, inplace=True)\n",
+    "    print(\"✅ Missing data handled efficiently.\")\n",
+    "    return df\n",
     "\n",
-    "print(\"\\n🔧 After Handling Missing Data:\")\n",
-    "display(df)\n",
+    "df = handle_missing_data(df)\n",
     "\n",
-    "# 📌 Step 5: Detect Duplicates\n",
-    "duplicates = df[df.duplicated()]\n",
-    "if not duplicates.empty:\n",
-    "    print(\"\\n🔁 Duplicate Rows Found:\")\n",
-    "    display(duplicates)\n",
-    "else:\n",
-    "    print(\"\\n✅ No duplicate rows found.\")\n",
+    "# 📌 Step 5: Optimized Duplicate Check (using hashing for large DataFrames)\n",
+    "def check_duplicates(df):\n",
+    "    if len(df) > 1000:  # Example threshold for larger datasets\n",
+    "        # Use a more performant deduplication strategy (hashing)\n",
+    "        duplicates = df[df.duplicated(subset=None, keep='first')]\n",
+    "    else:\n",
+    "        duplicates = df[df.duplicated()]\n",
+    "    \n",
+    "    if not duplicates.empty:\n",
+    "        print(\"\\n🔁 Duplicate Rows Found:\")\n",
+    "        display(duplicates)\n",
+    "    else:\n",
+    "        print(\"\\n✅ No duplicate rows found.\")\n",
+    "        \n",
+    "check_duplicates(df)\n",
     "\n",
-    "# 📌 Step 6: Detect Outliers in Numerical Columns (using IQR)\n",
-    "def detect_outliers_iqr(column):\n",
+    "# 📌 Step 6: Outlier Detection with User-defined Sensitivity (IQR method)\n",
+    "def detect_outliers_iqr(column, sensitivity=1.5):\n",
     "    Q1 = column.quantile(0.25)\n",
     "    Q3 = column.quantile(0.75)\n",
     "    IQR = Q3 - Q1\n",
-    "    lower = Q1 - 1.5 * IQR\n",
-    "    upper = Q3 + 1.5 * IQR\n",
+    "    lower = Q1 - sensitivity * IQR\n",
+    "    upper = Q3 + sensitivity * IQR\n",
     "    return column[(column < lower) | (column > upper)]\n",
     "\n",
-    "print(\"\\n📊 Outliers in Age:\")\n",
-    "outliers_age = detect_outliers_iqr(df['Age'])\n",
+    "print(\"\\n📊 Outliers in Age (Sensitivity=1.5):\")\n",
+    "outliers_age = detect_outliers_iqr(df['Age'], sensitivity=1.5)\n",
     "if not outliers_age.empty:\n",
     "    display(outliers_age)\n",
     "else:\n",
     "    print(\"✅ No outliers detected in 'Age'.\")\n",
     "\n",
-    "print(\"\\n📊 Outliers in Salary:\")\n",
-    "outliers_salary = detect_outliers_iqr(df['Salary'])\n",
+    "print(\"\\n📊 Outliers in Salary (Sensitivity=1.5):\")\n",
+    "outliers_salary = detect_outliers_iqr(df['Salary'], sensitivity=1.5)\n",
     "if not outliers_salary.empty:\n",
     "    display(outliers_salary)\n",
     "else:\n",
     "    print(\"✅ No outliers detected in 'Salary'.\")\n",
     "\n",
-    "# 📌 Step 7: Schema Validation (more robust)\n",
+    "# 📌 Step 7: Schema Validation with Regex Validation for Strings (Name, Department)\n",
+    "def validate_schema(df, expected_columns):\n",
+    "    for col, dtype in expected_columns.items():\n",
+    "        # Validate data type first\n",
+    "        if not pd.api.types.is_dtype_equal(df[col].dtype, dtype):\n",
+    "            print(f\"⚠️ Column '{col}' has incorrect type. Expected: {dtype}, Found: {df[col].dtype}\")\n",
+    "        # Regex validation for strings like 'Name' and 'Department'\n",
+    "        if col in ['Name', 'Department']:\n",
+    "            if col == 'Name':\n",
+    "                # Validate Name should only contain alphabets and spaces\n",
+    "                regex = r\"^[A-Za-z ]+$\"\n",
+    "            elif col == 'Department':\n",
+    "                # Validate Department should be a valid name from predefined list\n",
+    "                regex = r\"^[A-Za-z]+$\"\n",
+    "            \n",
+    "            invalid_values = df[~df[col].str.match(regex, na=False)]\n",
+    "            if not invalid_values.empty:\n",
+    "                print(f\"⚠️ Invalid entries in '{col}':\")\n",
+    "                display(invalid_values[[col]])\n",
+    "    print(\"✅ Schema validation completed.\")\n",
+    "\n",
+    "# Define expected columns and their types\n",
     "expected_columns = {\n",
     "    'Name': str,\n",
     "    'Age': (int, float),\n",
@@ -425,22 +315,7 @@
     "    'Department': str\n",
     "}\n",
     "\n",
-    "print(\"\\n🧾 Schema Validation:\")\n",
-    "try:\n",
-    "    check_for_missing_columns(df, expected_columns.keys())\n",
-    "    check_for_data_types(df, expected_columns)\n",
-    "except (ValueError, TypeError) as e:\n",
-    "    print(f\"❌ Error: {e}\")\n",
-    "\n",
-    "# 📌 Step 8: Categorical Consistency Check\n",
-    "expected_departments = ['HR', 'Finance', 'IT', 'Marketing']\n",
-    "invalid_departments = df[~df['Department'].isin(expected_departments)]\n",
-    "\n",
-    "if not invalid_departments.empty:\n",
-    "    print(\"\\n🚨 Invalid Department Entries:\")\n",
-    "    display(invalid_departments[['Name', 'Department']])\n",
-    "else:\n",
-    "    print(\"✅ All departments are valid.\")\n",
+    "validate_schema(df, expected_columns)\n",
     "\n",
     "# 📌 Final Summary\n",
     "print(\"\\n🎯 Data Quality Checks Completed.\")\n"
