--- a/src/Module 3/Techniques to Improve Data Quality/Ques_8.ipynb
+++ b/src/Module 3/Techniques to Improve Data Quality/Ques_8.ipynb
@@ -1,5 +1,83 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import great_expectations as gx\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Initialize an in-memory DataContext\n",
+    "context = gx.get_context()\n",
+    "\n",
+    "# Create a sample DataFrame\n",
+    "data = {'value': [1, 2, None, 4, 5]}\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Save the DataFrame to a CSV file\n",
+    "df.to_csv('data.csv', index=False)\n",
+    "\n",
+    "# Define the batch request\n",
+    "batch_request = {\n",
+    "    \"datasource_name\": \"my_pandas_datasource\",\n",
+    "    \"data_connector_name\": \"default_runtime_data_connector_name\",\n",
+    "    \"data_asset_name\": \"data.csv\",\n",
+    "    \"runtime_parameters\": {\"path\": \"data.csv\"},\n",
+    "    \"batch_identifiers\": {\"default_identifier_name\": \"default_identifier\"},\n",
+    "}\n",
+    "\n",
+    "# Create or load an expectation suite\n",
+    "suite_name = \"expect_no_missing_values\"\n",
+    "\n",
+    "# Try to load the expectation suite, if it doesn't exist, create it\n",
+    "try:\n",
+    "    # Instead of get_expectation_suite, we use create_expectation_suite if not found\n",
+    "    context.create_expectation_suite(suite_name)\n",
+    "except gx.exceptions.exceptions.DataContextError:\n",
+    "    print(f\"Expectation suite '{suite_name}' does not exist, creating a new one.\")\n",
+    "\n",
+    "# Create a Validator for the batch\n",
+    "validator = context.get_validator(\n",
+    "    batch_request=batch_request,\n",
+    "    expectation_suite_name=suite_name\n",
+    ")\n",
+    "\n",
+    "# Add an expectation to check that the 'value' column has no missing values\n",
+    "validator.expect_column_to_not_be_null(\"value\")\n",
+    "\n",
+    "# Save the expectation suite\n",
+    "validator.save_expectation_suite()\n",
+    "\n",
+    "# Run a checkpoint to validate the data\n",
+    "checkpoint = gx.checkpoint.Checkpoint(\n",
+    "    name=\"missing_value_check\",\n",
+    "    data_context=context,\n",
+    "    validations=[\n",
+    "        {\n",
+    "            \"batch_request\": batch_request,\n",
+    "            \"expectation_suite_name\": suite_name\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Execute the checkpoint\n",
+    "result = checkpoint.run()\n",
+    "\n",
+    "# Print the validation results\n",
+    "import pprint\n",
+    "pprint.pprint(result.to_json_dict())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
@@ -16,7 +94,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
